--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "scripts": {
     "dev": "nodemon"
   },
-  "keywords": [],
-  "author": "",
   "license": "ISC",
+  "prisma": {
+    "schema": "./src/shared/infra/db/prisma/schema.prisma"
+  },
   "dependencies": {
+    "@prisma/client": "^3.10.0",
     "dotenv": "^16.0.0",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "prisma": "^3.10.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -23,6 +26,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^27.5.1",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
     "ts-node": "^10.7.0",
