--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/shared/infra/http/server.ts",
   "scripts": {
-    "dev": "nodemon"
+    "dev": "ts-node-dev --respawn ."
   },
   "license": "ISC",
   "prisma": {
@@ -24,12 +24,13 @@
     "eslint": "^8.11.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.5.1",
-    "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.2"
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.6.2",
+    "typescript-transform-paths": "^3.3.1"
   }
 }
