--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/shared/infra/http/server.ts",
   "scripts": {
-    "dev": "ts-node-dev --respawn ."
+    "dev": "ts-node-dev --exit-child --respawn ."
   },
   "license": "ISC",
   "prisma": {
@@ -14,7 +14,7 @@
     "@prisma/client": "^3.10.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "prisma": "^3.10.0"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -29,6 +29,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.5.1",
     "prettier": "^2.5.1",
+    "prisma": "^3.10.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.2",
     "typescript-transform-paths": "^3.3.1"
