--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,8 @@
     "moduleResolution": "node" /* Specify how TypeScript looks up a file from a given module specifier. */,
     "baseUrl": "." /* Specify the base directory to resolve non-relative module names. */,
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "database": ["./src/shared/infra/db/prisma/connect.ts"]
     },
     "plugins": [
       { "transform": "typescript-transform-paths", "useRootDirs": true },
