--- a/api/dev.yml
+++ b/api/dev.yml
@@ -1,12 +1,12 @@
-version: "3.9"
+version: '3.9'
 services:
-  pg: 
+  pg:
     image: postgres:14.5
-    restart: "always"
+    restart: 'always'
     expose:
-      - "5432"
+      - '5432'
     ports:
-      - "5432:5432"
+      - '5432:5432'
     environment:
       - POSTGRES_DB=prisma
       - POSTGRES_HOST_AUTH_METHOD=trust
